@@ -10,6 +10,10 @@
     <description>The core project of Substeps</description>
     <url>https://github.com/Substeps/substeps-framework</url>
 
+    <prerequisites>
+        <maven>3.0</maven>
+    </prerequisites>
+
     <scm>
         <connection>scm:git:https://github.com:Substeps/substeps-framework.git</connection>
         <developerConnection>scm:git:git@github.com:Substeps/substeps-framework.git</developerConnection>
@@ -117,30 +121,34 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
+
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <stable.substeps.version>1.0.0-SNAPSHOT</stable.substeps.version>
 
         <slf4j.version>1.7.26</slf4j.version>
 
         <junit.version>4.12</junit.version>
-        <hamcrest.version>1.3</hamcrest.version>
-        <mockito.version>2.7.19</mockito.version>
-        <guava.version>23.5-jre</guava.version>
+        <hamcrest.version>2.1</hamcrest.version>
+        <mockito.version>3.0.0</mockito.version>
+        <guava.version>28.1-jre</guava.version>
         <gson.version>2.8.2</gson.version>
         <typesafe.config.version>1.3.4</typesafe.config.version>
 
-        <jacoco.version>0.7.6.201602180812</jacoco.version>
+<!--        <jacoco.version>0.7.6.201602180812</jacoco.version>-->
+        <jacoco.version>0.8.4</jacoco.version>
 
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 
         <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
         <scala.major.version>2.12</scala.major.version>
-        <scala.version>${scala.major.version}.8</scala.version>
+        <scala.version>${scala.major.version}.10</scala.version>
 
         <json4s.version>3.6.6</json4s.version>
         <scala-test.version>3.0.8</scala-test.version>
-        <scala-mock.version>4.2.0</scala-mock.version>
+        <scala-mock.version>4.4.0</scala-mock.version>
         <!-- Configuration to enable SCM access via Travis-CI -->
         <project.scm.id>scm.credentials</project.scm.id>
 
@@ -325,7 +333,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.5.201505241946</version>
+                <version>${jacoco.version}</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -482,14 +490,32 @@
 
 
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.7</version>
+                    <configuration>
+                        <generateBackupPoms>false</generateBackupPoms>
+                    </configuration>
+                </plugin>
+
+
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
+                    <version>3.8.1</version>
 
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <release>11</release>
+<!--                        <source>${java.version}</source>-->
+<!--                        <target>${java.version}</target>-->
                         <encoding>${project.build.sourceEncoding}</encoding>
+
+                        <compilerArgs>
+                            <arg>-J-XaddExports:jdk.compiler/com.sun.source.util=ALL-UNNAMED</arg>
+                            <arg>-J-XaddExports:jdk.compiler/com.sun.source.doctree=ALL-UNNAMED</arg>
+                            <arg>-J-XaddExports:jdk.javadoc/jdk.javadoc.doclet=ALL-UNNAMED</arg>
+                        </compilerArgs>
+
                     </configuration>
                 </plugin>
                 <plugin>
@@ -565,12 +591,19 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19</version>
+                    <version>2.22.2</version>
+
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
+
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>2.19</version>
+                    <version>2.22.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -603,7 +636,7 @@
                 <plugin>
                     <groupId>org.scalatest</groupId>
                     <artifactId>scalatest-maven-plugin</artifactId>
-                    <version>1.0</version>
+                    <version>2.0.0</version>
                     <configuration>
                         <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                         <junitxml>.</junitxml>
@@ -661,9 +694,10 @@
                             <artifactId>maven-compiler-plugin</artifactId>
 
                             <configuration>
-                                <compilerArgument>-g</compilerArgument>
-                                <source>${java.version}</source>
-                                <target>${java.version}</target>
+                                <release>11</release>
+<!--                                <compilerArgument>-g</compilerArgument>-->
+<!--                                <source>${java.version}</source>-->
+<!--                                <target>${java.version}</target>-->
                             </configuration>
                         </plugin>
 
